wav: Don't avio_seek() if we know we'll run into EOF

Since we want to break the loop the 'if (data_ofs < 0)' block is moved after the loop.
This fixes ticket #250.